--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="overlay"></div>
       <div class="container-fluid px-0">
       	<div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-end">
-	      	<img class="one-third js-fullheight align-self-end order-md-last img-fluid" src="F:\taranga\images\i2.jpg" alt="working place"> 
+	      	<img class="one-third js-fullheight align-self-end order-md-last img-fluid" src="images/i2.jpg" alt="working place"> 
 	      		<div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 	        	<div class="text mt-5"> 
 	        		<span class="subheading">WE WILL DEVELOP THE PRODUCT</span> <span>THAT WILL BUILD YOUR</span> <span>BUSINESS</span></h1>
