--- a/hosting.html
+++ b/hosting.html
@@ -78,6 +78,7 @@
 
 						  
     <section class="ftco-section">
+	<center>
 	<h1><center> <strong>DIRECTOR </center> </strong></h1>
     	<div class="container">
     		<div class="row">
@@ -94,11 +95,12 @@
     			</div> 
 				</div> 
 				</div>
+				</center>
 			
-			
-    			<div class="col-md-4 text-center ftco-animate">
+			<center>
+    			<div class="col-md-6 text-center ftco-animate">
     				<div class="steps">
-						<div class="icon mb-4 d-flex justify-content-center align-items-center">
+						<div class="icon mb-6 d-flex justify-content-center align-items-center">
     						<span class="icon-female"></span>
     					</div>
     					<p> Mrs. Shubha A.V <br>
